--- a/turkey.html
+++ b/turkey.html
@@ -6,10 +6,16 @@
             body {
                 padding: 0;
                 margin: 0;
+                background-color: #fefaf6;
             }
             .flag {
                 background-color:  #e30a17;
                 width: 60vw;
+                height: 40vw;
+            }
+            .white {
+                background-color: white;
+                width: 1.3333vw;
                 height: 40vw;
             }
             .moon{
@@ -47,6 +53,8 @@
     </head>
     <body>
         <div class="flag">
+            <div class="white">
+            </div>
             <div class="moon">
                 
             </div>
