--- a/germany.html
+++ b/germany.html
@@ -3,28 +3,37 @@
     <head>
         <title>The Flag of Germany</title>
         <style>
-            body {
+            * {
+                box-sizing: border-box;
+            }
+            html, body {
+                width: 100%;
+                height: 100%;
                 padding: 0;
                 margin: 0;
+                background: gray;
             }
             .flag {
+                margin: auto;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                width: 65.407%;
+                padding-bottom: 39.244%;
             }
             .black {
-                width: 50vw;
-                height: 10vw;
+                width: 100%;
+                padding-bottom: 20.28%;
                 background-color: #000;
             }
             .red {
-                width: 50vw;
-                height: 10vw;
+                width: 100%;
+                padding-bottom: 20.28%;
                 background-color: #ff0000;
             }
             .yellow {
-                width: 50vw;
-                height: 10vw;
+                width: 100%;
+                padding-bottom: 20.28%;
                 background-color: #ffcc00;
             }
         </style>
